# purity_analysis

./: .gitignore  CMakeLists.txt  __init__.py  __main__.py  bytecodes_analysis.py  bytecodes_analysis_testing.py  c_function_annotations.json  printers.py  setup.py  tracer.py  utils.py
bytecodes_analysis/: __init__.py  bytecodes_analysis.py  c_function_annotations.json  setup.py  tracer.py  utils.py
bytecodes_analysis/c_modules/: Tracer.cc  Tracer.h  ctracer.cc  ctracer.h  draft.c  utils.cc  utils.h
c_modules/: Tracer.cc  Tracer.h  ctracer.cc  utils.cc  utils.h
tests/: bytecodes_analysis_testing.py  data.csv  impure_basic.py  impure_call.py  impure_closure.py  impure_obj.py  impure_recursive.py  model-knn.py  pure_basic.py  pure_basic_1.py  pure_call.py  pure_closure.py  pure_list.py  pure_obj.py  pure_recursive.py  pydron-example1.py
